# tomatoboat

./: README.md  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: App.vue  Root.vue  main.ts  routes.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-12-04-091741_topic/: up.sql
src-tauri/migrations/2023-12-06-053308_topic/: down.sql  up.sql
src-tauri/migrations/2023-12-06-053714_event/: down.sql  up.sql
src-tauri/migrations/2023-12-06-053747_work/: down.sql  up.sql
src-tauri/src/: commands.rs  db.rs  main.rs  menu.rs  models.rs  schema.rs  service.rs
src-tauri/src/action/: block_websites.rs  clock.rs  mod.rs
src-tauri/src/db/: connect.rs  mod.rs  models.rs  schema.rs  service.rs
src/components/: CreateTopic.vue  Greet.vue  TopicEntry.vue
src/components/Timer/: index.vue
src/components/TopicEntry/: index.vue
src/components/base/: Button.vue  Card.vue  Dropdown.vue  Icon.vue  Modal.vue  TopicEntry.vue
src/db/: index.ts  init.ts  types.ts
src/pages/: Home.vue  Topic.vue
src/utils/: notification.ts  validators.ts
